--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,33 @@
     tools:context=".MainActivity">
 <com.google.android.material.tabs.TabLayout
     android:id="@+id/tabs"
-    android:background="#ccf"
+    android:background="#9C27B0"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content">
+    <com.google.android.material.tabs.TabItem
+        android:id="@+id/tabNo1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="11tab 1"
+        android:icon="@mipmap/ic_launcher"
+        />
+
+    <com.google.android.material.tabs.TabItem
+        android:id="@+id/tabNo2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="tab 2"
+        android:icon="@mipmap/ic_launcher"
+        />
+
+    <com.google.android.material.tabs.TabItem
+        android:id="@+id/tabNo3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="tab_3"
+        android:icon="@mipmap/ic_launcher"
+        />
+</com.google.android.material.tabs.TabLayout>
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
