--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f97"
+    android:id="@+id/mainFragment1"
     tools:context=".FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
